--- a/ckanext/tess/templates/workflow/ajax/edit_training.html
+++ b/ckanext/tess/templates/workflow/ajax/edit_training.html
@@ -1,5 +1,11 @@
-<script type="application/javascript">
+<script>
+    $(function() {
+        populateModal();
+        // Handler for .ready() called.
+    });
+
     $('#save-material' ).on('click', function(event) {
+        console.log("HEEERREE")
         var selected = [];
         $('#training_materials input:checked').each(function() {
             selected.push({
@@ -8,12 +14,7 @@
             });
         });
         cy.$(':selected').data('materials', selected);
-
     });
-    $('#myModal').on('show', function(e) {
-        populateModal();
-    });
-    populateModal();
 
     function populateModal() {
         if (action == 'edit') {
@@ -38,13 +39,15 @@
                 $('.modal-workflow-description').text('There is no description for this workflow node.');
                 $('.modal-workflow-description').addClass('empty')
             }
-
+            console.log('blahahahha');
+            console.log(node.materials);
             if (node.materials != undefined && node.materials.constructor === Array && node.materials.length > 0) {
                 $.each(node.materials, function (index, material) {
                     var row = '<tr>';
                     row += '<td><a href="/package/' + material['id'] + '">' + material['name'] + '</a></td>';
                     row += '</tr>';
                     $('#workflow-materials').append(row);
+                    console.log(row)
                     /* Check associated material checkboxes  */
                     $('#' + material['id']).prop('checked', true)
                     /* Delete and Prepend them so they bubble to the top */
