--- a/ckanext/tess/templates/workflow/ajax/read_training.html
+++ b/ckanext/tess/templates/workflow/ajax/read_training.html
@@ -86,6 +86,7 @@
             error: function (xhr, ajaxOptions, thrownError) {
                 alert(xhr.responseJSON['error']['message']);
                 $(busy).toggle()
+                $(remove_icon).toggle()
             }
         });
 
@@ -141,12 +142,11 @@
                     $(submit).prop('disabled', false)
                 }
                 $(busy).toggle()
-
             },
             error: function (xhr, ajaxOptions, thrownError) {
                 /*console.log(xhr)
                  $('#myModal').modal('hide')*/
-                /*alert(xhr.responseJSON['error']['message']);*/
+                $(remove_icon).toggle()
                 $(busy).toggle()
             }
         });
@@ -182,11 +182,10 @@
                 {% if c.user %}
                 {% if c.material_package.get(material.get('id')) %}
                 <td>
-                    {% if c.material_package.get(material.get('id'), {}).get('associated') %}
-                        <span id="no_packages_text-{{material.get('id')}}" class="empty" hidden><b>{{material.get('name')}}</b> is not included in any of your packages.</span>
-                    {% else %}
-                        <span id="no_packages_text-{{material.get('id')}}" class="empty"><b>{{material.get('name')}}</b> is not included in any of your packages.</span>
-                    {% endif %}
+                    <span id="no_packages_text-{{material.get('id')}}" class="empty"
+                        {% if c.material_package.get(material.get('id'), {}).get('associated') %}
+                        hidden {% endif %}
+                    ><b>{{material.get('name')}}</b> is not included in any of your packages.</span>
                     <ul id="assigned_packages-{{material.get('id')}}" style="margin:0">
                         {% for package in c.material_package.get(material.get('id'), {}).get('associated') %}
                         <li id="listing-{{material.get('id')}}-{{package.get('id')}}" style="list-style:none">
